--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@
 900px - 1200px tablet (landscape)
 1800px+ large desktop
 
-*/
-/*
  $breakpoint argument choices
 - mobile
 - portrait
 - landscape
 - large-screen
+
+ORDER - Base & typography, general layout & grid, page layout, components
 
 1em = 16px;
 
@@ -61,24 +61,22 @@
 
 html {
   font-size: 62.5%; }
-  @media (max-width: 600px) {
-    html {
-      font-size: 50%; } }
-  @media (max-width: 37.5em) {
-    html {
-      font-size: 50%; } }
-  @media (max-width: 56.25em) {
-    html {
-      font-size: 60%; } }
   @media (max-width: 75em) {
     html {
-      font-size: 70%; } }
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
   @media (min-width: 112.5em) {
     html {
-      font-size: 80%; } }
+      font-size: 75%; } }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 3rem; }
+  @media (max-width: 56.25em) {
+    body {
+      padding: 0; } }
 
 body {
   font-family: 'Lato', sans-serif;
@@ -99,6 +97,10 @@ body {
     letter-spacing: 2rem;
     animation-name: moveInFromTop;
     animation-duration: 2s; }
+    @media (max-width: 37.5em) {
+      .main-heading--large {
+        letter-spacing: 1rem;
+        font-size: 5rem; } }
   .main-heading--sub {
     display: block;
     font-size: 4rem;
@@ -108,6 +110,9 @@ body {
     animation-duration: 3s;
     animation-delay: 2s;
     animation-fill-mode: backwards; }
+    @media (max-width: 37.5em) {
+      .main-heading--sub {
+        letter-spacing: .5rem; } }
     .main-heading--sub:hover {
       transform: skewY(2deg); }
 
@@ -124,6 +129,12 @@ body {
   background-image: -webkit-linear-gradient(left, #a4fbed, #00ffe2);
   background-image: -o-linear-gradient(left, #a4fbed, #00ffe2);
   background-image: linear-gradient(to left top, #a4fbed, #00ffe2); }
+  @media (max-width: 56.25em) {
+    .secondary-heading--green {
+      font-size: 3rem; } }
+  @media (max-width: 37.5em) {
+    .secondary-heading--green {
+      font-size: 2.5rem; } }
   .secondary-heading--green:hover {
     transform: skewY(-6deg) skewX(5deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
@@ -141,6 +152,12 @@ body {
   background-image: -webkit-linear-gradient(left, #ffb900, #ff7730);
   background-image: -o-linear-gradient(left, #ffb900, #ff7730);
   background-image: linear-gradient(to left top, #ffb900, #ff7730); }
+  @media (max-width: 56.25em) {
+    .secondary-heading--orange {
+      font-size: 3rem; } }
+  @media (max-width: 37.5em) {
+    .secondary-heading--orange {
+      font-size: 2.5rem; } }
   .secondary-heading--orange:hover {
     transform: skewY(-6deg) skewX(5deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
