--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,19 +9,26 @@
 html {
   font-size: 62.5%; // 1rem = 10px, 10px / 16px = 62.5%
 
-  @include responsive(portrait) {
-    font-size: 50%; // 1rem = 8px, 8 / 16 = 50%
+  @include responsive(landscape) { // width less than 1200
+    font-size: 56.25%; // 1rem = 9px, 8 / 16 = 56.25%
   }
 
-  @include responsive(landscape) {
-    font-size: 56.25%; // 1rem = 9px, 8 / 16 = 56.25%
+  @include responsive(portrait) { // width less than 900
+    font-size: 50%; // 1rem = 8px, 8 / 16 = 50%
   }
 
   @include responsive(large-screen) {
     font-size: 75%; // 1rem = 12px, 12 / 16 = 75%
+  }
 
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include responsive(portrait) { 
+    padding: 0;
+  }
+
 }
