--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -19,6 +19,11 @@ body {
     letter-spacing: 2rem;
     animation-name: moveInFromTop;
     animation-duration: 2s;
+
+    @include responsive(mobile) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
 
   &--sub {
@@ -30,6 +35,10 @@ body {
     animation-duration: 3s;
     animation-delay: 2s;
     animation-fill-mode: backwards;
+
+    @include responsive(mobile) {
+      letter-spacing: .5rem;
+    }
 
     &:hover {
       transform: skewY(2deg);
@@ -52,11 +61,20 @@ body {
      background-image: -o-linear-gradient(left, $colour-primary-light, $colour-primary-dark);
      background-image: linear-gradient(to left top, $colour-primary-light, $colour-primary-dark);
 
+     @include responsive(portrait) {
+       font-size: 3rem;
+     }
+
+     @include responsive(mobile) {
+       font-size: 2.5rem;
+     }
+
+
          &:hover {
            transform: skewY(-6deg) skewX(5deg) scale(1.1);
            text-shadow: .5rem 1rem 2rem rgba($colour-black, .2);
          }
-       }
+    }
 
      &--orange {
          font-size: 3.5rem;
@@ -71,6 +89,14 @@ body {
          background-image: -webkit-linear-gradient(left, $colour-secondary-light, $colour-secondary-dark);
          background-image: -o-linear-gradient(left, $colour-secondary-light, $colour-secondary-dark);
          background-image: linear-gradient(to left top, $colour-secondary-light, $colour-secondary-dark);
+
+         @include responsive(portrait) {
+           font-size: 3rem;
+         }
+
+         @include responsive(mobile) {
+           font-size: 2.5rem;
+         }
 
            &:hover {
              transform: skewY(-6deg) skewX(5deg) scale(1.1);
