--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -23,6 +23,8 @@ $colour-black: #000;
 
 $grid-width: 130rem;
 $vertical-margin: 8rem;
+$vertical-margin-small: 6rem;
+
 $horizontal-margin-large: 6rem;
 $horizontal-margin: 1.2rem;
 
