--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -4,6 +4,16 @@
 
   &:not(:last-child) {
     margin-bottom: $vertical-margin;
+
+    @include responsive(portrait) {
+      margin-right: $vertical-margin-small;
+    }
+
+  }
+
+  @include responsive(portrait) {
+    max-width: 50rem;
+    padding: 0 3rem;
   }
 
   @include clearfix;
@@ -13,6 +23,14 @@
 
     &:not(:last-child) {
       margin-right: $horizontal-margin-large;
+
+      @include responsive(portrait) {
+        margin-right: 0;
+      }
+    }
+
+    @include responsive(portrait) {
+      width: 100% !important;
     }
 
   }
