--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -21,17 +21,27 @@
     top: 3.5rem;
     left: 3.5rem;
     backface-visibility: hidden;
+
+    @include responsive(portrait) {
+      top: 2.5rem;
+      left: 2.5rem;
+    }
+
+    @include responsive(mobile) {
+      top: 2rem;
+      left: 2rem;
+    }
   }
 
   &__logo {
     height: 6rem;
   }
 
-  &__logo:hover {
-    animation: moveInFromRight;
-    animation-duration: 3s;
-    cursor: pointer;
-  }
+    &__logo:hover {
+      animation-name: moveInFromRight;
+      animation-duration: 3s;
+      cursor: pointer;
+    }
 
   &__text-container {
     @include absoluteCentre;
