--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,7 @@ body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   line-height: 1.7;
-  color: #777;
-  padding: 3rem; }
+  color: #777; }
 
 .main-heading {
   color: #fff;
@@ -180,9 +179,15 @@ body {
 
 .u-margin-bottom-large {
   margin-bottom: 8rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-large {
+      margin-bottom: 5rem !important; } }
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-medium {
+      margin-bottom: 3rem !important; } }
 
 .u-margin-bottom-small {
   margin-bottom: 1.5rem !important; }
@@ -281,15 +286,35 @@ body {
     z-index: 5;
     transition: all .2s;
     outline-offset: 0.6rem; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 33.3333333%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
     .composition__photo--p1 {
       left: -5%;
       top: -2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p1 {
+          top: 0;
+          transform: scale(1.2); } }
     .composition__photo--p2 {
       right: 5%;
       top: 2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p2 {
+          top: -1rem;
+          transform: scale(1.3);
+          z-index: 100; } }
     .composition__photo--p3 {
       left: 15%;
       top: 15rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p3 {
+          top: 1rem;
+          left: 0;
+          transform: scale(1.1); } }
     .composition__photo:hover {
       outline: 1rem solid #52fde8;
       transform: scale(1.2) translateY(-0.5rem);
@@ -307,6 +332,9 @@ body {
   border-radius: 0.5rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transition .3s; }
+  @media (max-width: 56.25em) {
+    .theme-box {
+      padding: 1.4rem; } }
   .theme-box__icon {
     font-size: 5rem;
     margin: .1rem;
@@ -317,6 +345,9 @@ body {
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent; }
+    @media (max-width: 56.25em) {
+      .theme-box__icon {
+        margin: 0; } }
   .theme-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
 
@@ -657,10 +688,18 @@ body {
     top: 3.5rem;
     left: 3.5rem;
     backface-visibility: hidden; }
+    @media (max-width: 56.25em) {
+      .header__logo-container {
+        top: 2.5rem;
+        left: 2.5rem; } }
+    @media (max-width: 37.5em) {
+      .header__logo-container {
+        top: 2rem;
+        left: 2rem; } }
   .header__logo {
     height: 6rem; }
   .header__logo:hover {
-    animation: moveInFromRight;
+    animation-name: moveInFromRight;
     animation-duration: 3s;
     cursor: pointer; }
   .header__text-container {
@@ -856,6 +895,9 @@ body {
   background-color: #f7f7f7;
   padding: 20rem 10rem;
   margin-top: -20vh; }
+  @media (max-width: 56.25em) {
+    .about-section {
+      padding: 18rem 0; } }
 
 .theme-section {
   padding: 10rem 0;
@@ -865,11 +907,17 @@ body {
   transform: skewY(-5deg); }
   .theme-section > * {
     transform: skewY(5deg); }
+  @media (max-width: 56.25em) {
+    .theme-section {
+      padding: 5rem 0; } }
 
 .faves-section {
   background-color: #f7f7f7;
   padding: 15rem 0 10rem 0;
   margin-top: -9rem; }
+  @media (max-width: 56.25em) {
+    .faves-section {
+      padding: 13rem 0 8rem 0; } }
 
 .stories-section {
   padding: 1rem 0;
@@ -878,6 +926,9 @@ body {
 .booking-section {
   padding: 12rem 0;
   background-image: linear-gradient(to right bottom, #a4fbed, #00ffe2); }
+  @media (max-width: 56.25em) {
+    .booking-section {
+      padding: 7rem; } }
 
 .booking {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 52%), url("../images/chinesecalligraphy.jpg");
