--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -10,19 +10,44 @@
       transition: all .2s;
       outline-offset: 0.6rem;
 
+        @include responsive(portrait) {
+          float: left;
+          position: relative;
+          width: 33.3333333%;
+          box-shadow: 0 1.5rem 3rem rgba($colour-black, .2);
+        }
+
          &--p1 {
            left: -5%;
            top: -2rem;
+
+           @include responsive(portrait) {
+             top: 0;
+             transform: scale(1.2);
+           }
+
          }
 
          &--p2 {
            right: 5%;
            top: 2rem;
+
+           @include responsive(portrait) {
+             top: -1rem;
+             transform: scale(1.3);
+             z-index: 100;
+           }
          }
 
          &--p3 {
            left: 15%;
            top: 15rem;
+
+           @include responsive(portrait) {
+             top: 1rem;
+             left: 0;
+             transform: scale(1.1);
+           }
          }
 
          &:hover {
