--- a/sass/components/_theme-box.scss
+++ b/sass/components/_theme-box.scss
@@ -8,6 +8,10 @@
   box-shadow: 0 1.5rem 4rem rgba($colour-black, .15);
   transition: transition .3s;
 
+    @include responsive(portrait) {
+      padding: 1.4rem;
+    }
+
   &__icon {
       font-size: 5rem;
       margin: .1rem;
@@ -18,6 +22,10 @@
       background-clip: text;
       -webkit-background-clip: text;
       color: transparent;
+
+      @include responsive(portrait) {
+        margin: 0;
+      }
   }
 
   &:hover {
