--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -9,6 +9,16 @@
   font-size: $default-font-size;
   transform: skewX(-12deg);
 
+  @include responsive(portrait) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 6rem;
+  }
+
+  @include responsive(mobile) {
+    transform: skewX(0);
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -19,6 +29,10 @@
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
+
+    @include responsive(mobile) {
+      transform: translateX(-3rem) skewX(0);
+    }
   }
 
   &__image {
@@ -27,5 +41,9 @@
 
   &__text {
     transform: skewX(12deg);
+
+    @include responsive(mobile) {
+      transform: skewX(0);
+    }
   }
 }
