--- a/css/style.css
+++ b/css/style.css
@@ -565,6 +565,10 @@ body {
   width: 49%;
   display: inline-block;
   margin-top: 1rem; }
+  @media (max-width: 56.25em) {
+    .form__radio-buttons {
+      width: 100%;
+      margin-bottom: 1rem; } }
 
 .form__radio-input {
   display: none; }
@@ -973,6 +977,9 @@ body {
   @media (max-width: 56.25em) {
     .booking-section {
       padding: 7rem; } }
+  @media (max-width: 37.5em) {
+    .booking-section {
+      padding: 2rem; } }
 
 .booking {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 52%), url("../images/chinesecalligraphy.jpg");
@@ -981,7 +988,17 @@ body {
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
   @media (max-width: 75em) {
     .booking {
-      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 70%, transparent 70%), url("../images/chinesecalligraphy.jpg"); } }
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 70%, transparent 70%), url("../images/chinesecalligraphy.jpg");
+      background-size: cover; } }
+  @media (max-width: 56.25em) {
+    .booking {
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url("../images/chinesecalligraphy.jpg"); } }
   .booking__form {
     width: 55%;
     padding: 3rem 4rem; }
+    @media (max-width: 75em) {
+      .booking__form {
+        width: 70%; } }
+    @media (max-width: 56.25em) {
+      .booking__form {
+        width: 100%; } }
