--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -52,6 +52,11 @@
       width: 49%;
       display: inline-block;
       margin-top: 1rem;
+
+      @include responsive(portrait) {
+        width: 100%;
+        margin-bottom: 1rem;
+      }
     }
 
     &__radio-input {
