--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -21,6 +21,7 @@
       display: table;
       overflow: hidden;
       opacity: 0;
+      transform: translate(-50%, -50%);
       transition: all .4s .2s;
     }
 
